Fix deprecated usage.