@@ -44,11 +44,11 @@ public class HostKeyCallbackFactory extends Factory<HostKeyCallback> {
                 if(null == constructor) {
                     log.warn(String.format("No matching constructor for parameter %s", c.getClass()));
                     // Call default constructor for disabled implementations
-                    return clazz.newInstance();
+                    return clazz.getDeclaredConstructor().newInstance();
                 }
                 return constructor.newInstance(c);
             }
-            catch(InstantiationException | InvocationTargetException | IllegalAccessException e) {
+            catch(InstantiationException | InvocationTargetException | IllegalAccessException | NoSuchMethodException e) {
                 log.error(String.format("Failure loading callback class %s. %s", clazz, e.getMessage()));
                 return new DisabledHostKeyCallback();
             }
